--- a/uoft-contribution-frontend/package.json
+++ b/uoft-contribution-frontend/package.json
@@ -20,6 +20,7 @@
     "react-images-upload": "^1.2.8",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^4.0.0",
+    "react-stripe-checkout": "^2.6.3",
     "react-test-renderer": "^17.0.1"
   },
   "scripts": {
